# swt-gen

./: .gitignore  Cargo.toml  TODO.md
.githooks/: README.md  pre-commit
resources/: hex_grid.html  hex_grid.txt  hexagon.html  medium_hex_template.txt  small_hex_template.txt
resources/tables/: atmospheres.csv  cultural_differences.csv  factions.csv  governments.csv  hydrographics.csv  law_levels.csv  populations.csv  starports.csv  tech_levels.csv  temperatures.csv  world_tags.csv
src/: app.rs  astrography.rs  dice.rs  histogram.rs  lib.rs  main.rs  markdown.rs
src/app/: gui.rs  mod.rs  pipe.rs  popup.rs  subsector_map_display.rs
src/app/gui/: popup.rs  subsector_map_display.rs  world_data_display.rs
src/astrography/: dice.rs  mod.rs  randomization_tables.rs  serialize.rs  table.rs  world.rs
src/astrography/serialize/: json.rs  t5_table.rs
