[package]
name = "traveller-generator"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
lazy_static = "1.4.0"
rand = "0.8"
roxmltree = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
