[package]
name = "traveller-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
lazy_static = "1.4.0"
rand = "0.8"
roxmltree = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"

# GUI dependencies
egui = "0.18.1"
eframe = "0.18.0"
egui_extras = "0.18.0"
usvg = "0.22.0"
resvg = "0.22.0"
tiny-skia = "0.6.3"
native-dialog = "0.6.3"
